# week-8-exercises

./: notes.md
.devcontainer/: Dockerfile  devcontainer.json
arrays/: array_reductions.cpp  array_reductions_2.cpp  array_reductions_3.cpp
omp_examples/: cache_coherence.cpp  omp_fib.cpp  omp_reduction.cpp
pi/: CMakeLists.txt  main.cpp  test.cpp  test_openmp
